@kkafar/quick fixes 2 (#97)
* chore: add chest description

* fix: launching from image

* chore: update configuration