@@ -83,6 +83,7 @@ jlink {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
         name = 'app'
+        jvmArgs = ['--add-exports=javafx.graphics/com.sun.javafx.scene=io.rpg']
     }
     forceMerge('log4j-api')
 }
